--- a/Линейная_модель_и_градиентный_спуск.ipynb
+++ b/Линейная_модель_и_градиентный_спуск.ipynb
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 26,
       "id": "031d71d4-ceeb-4611-8a43-7012308a19e6",
       "metadata": {
         "tags": [],
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "031d71d4-ceeb-4611-8a43-7012308a19e6",
-        "outputId": "73bef6ce-ea42-4542-caed-c792c8075ad9"
+        "outputId": "bc3b23e3-5313-42b4-8a94-6d5b8bc3e5c6"
       },
       "outputs": [
         {
@@ -228,29 +228,26 @@
             "3                                 2               36.0  \n",
             "4                                 5               66.0  \n"
           ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1654258973.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-            "  X['Extracurricular Activities'] = X['Extracurricular Activities'].replace({'Yes': 1, 'No': 0})\n"
-          ]
         }
       ],
       "source": [
         "data = pd.read_csv('Student_Performance.csv')\n",
         "print(data.head())\n",
         "\n",
-        "Y = data['Performance Index'].values\n",
-        "X = data.drop(columns=['Performance Index'])\n",
-        "X['Extracurricular Activities'] = X['Extracurricular Activities'].replace({'Yes': 1, 'No': 0})\n",
-        "X = X.to_numpy()"
+        "X = data.drop(columns=['Performance Index']).copy()\n",
+        "X['Extracurricular Activities'] = (\n",
+        "    X['Extracurricular Activities']\n",
+        "    .map({'Yes': 1, 'No': 0})\n",
+        "    .astype(int)\n",
+        ")\n",
+        "\n",
+        "Y = data['Performance Index'].to_numpy()\n",
+        "X = X.to_numpy()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 27,
       "id": "c5a2ec08-17d8-4e11-9f20-b2ccd9a9f760",
       "metadata": {
         "tags": [],
@@ -275,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 28,
       "id": "e5c8fdd2-2f45-4765-900a-a0d949c8d96f",
       "metadata": {
         "tags": [],
@@ -289,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 29,
       "id": "c5f2b9d0-6210-4107-8c47-1893ded1cdb1",
       "metadata": {
         "tags": [],
@@ -298,7 +295,7 @@
           "height": 472
         },
         "id": "c5f2b9d0-6210-4107-8c47-1893ded1cdb1",
-        "outputId": "15a73fbf-ef0e-493b-9463-e45265f821f6"
+        "outputId": "54065f70-49c5-4341-8eeb-aa6b6f9322d2"
       },
       "outputs": [
         {
@@ -366,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 30,
       "id": "ffcd3871-36fb-4cf4-8178-7f8e267909a1",
       "metadata": {
         "tags": [],
@@ -374,7 +371,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ffcd3871-36fb-4cf4-8178-7f8e267909a1",
-        "outputId": "d4264348-6afe-4f80-f841-800bec76063a"
+        "outputId": "88831c56-1e58-4fb3-842c-74b8e1f63516"
       },
       "outputs": [
         {
@@ -443,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 31,
       "id": "3f5185da-6c3a-4a4e-aece-10f028d70695",
       "metadata": {
         "tags": [],
@@ -451,7 +448,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3f5185da-6c3a-4a4e-aece-10f028d70695",
-        "outputId": "02337670-7db3-4c01-c643-a73cee07570d"
+        "outputId": "9b9506eb-1cfd-449b-8e30-fdace84d843a"
       },
       "outputs": [
         {
@@ -538,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 32,
       "id": "f5cc712a-7d9b-4121-af7a-f5107b5d95b4",
       "metadata": {
         "tags": [],
@@ -558,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 33,
       "id": "37c38a96-4e7d-46f1-8d11-031e3c6e7924",
       "metadata": {
         "tags": [],
@@ -572,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 34,
       "id": "764abb9b-2fc3-4859-be34-06099840a914",
       "metadata": {
         "tags": [],
@@ -581,7 +578,7 @@
           "height": 472
         },
         "id": "764abb9b-2fc3-4859-be34-06099840a914",
-        "outputId": "2387d643-be6f-46d7-bed6-10ecaa64e2ef"
+        "outputId": "e1a569dc-7072-4725-b945-018478a1851c"
       },
       "outputs": [
         {
@@ -611,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 35,
       "id": "0fb2e181-a6c8-429d-bd55-2d8645c193a4",
       "metadata": {
         "tags": [],
@@ -619,7 +616,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0fb2e181-a6c8-429d-bd55-2d8645c193a4",
-        "outputId": "9447d3cd-5b68-41ac-a96c-1a3561c30043"
+        "outputId": "253671db-5ec5-4f83-b98b-669451e85b8c"
       },
       "outputs": [
         {
@@ -671,10 +668,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r_XQtqYZRXrf",
-        "outputId": "680b0577-3cc9-4af5-d11d-d2082673ed3a"
+        "outputId": "06532f84-71c3-4879-d801-e844aabdbfdb"
       },
       "id": "r_XQtqYZRXrf",
-      "execution_count": 22,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
